# fractals

./: .gitignore  Cargo.toml
examples/: cpu_render_image.rs  cpu_render_window.rs  gpu_render_image.rs
shaders/: compute_mandelbrot.comp  compute_mandelbrot.glsl  test_shader.comp
src/: lib.rs  main.rs
src/fractalgen/: colouring.rs  common.rs  julia.rs  mandelbrot.rs
src/fractalgen/cpu_renderer/: mod.rs  multi_threaded.rs  single_threaded.rs
src/fractalgen/gpu_renderer/: mod.rs
src/fractalgen/gpu_renderer/compute/: mod.rs  shaders.rs  vulkan_compute.rs
