[package]
name = "fractals"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24.0"
color_space = "0.5.3"
num = "0.4.0"
rayon = "1.5.1"
vulkano = "0.28.0"
vulkano-shaders = "0.28.0"

# To be moved into dev deps as main.rs is moved to examples
vulkano-win = "0.28.0"
winit = "0.26.1"

# Dependencies for tests, examples, benchmarks. Not included with regular builds of library
[dev-dependencies]
minifb = "0.20.0"